--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -1,4 +1,3 @@
-head_title.default: Welcome
-website:
-    description:
-    name: Website
+Welcome: Bienvenue
+Website name: Nom du site
+Website description: Description du site
